# LGTM

./: .gitignore  Cargo.toml  LICENSE  README.md  ai-review-pipeline-design.md
.ai-review/: config.yml  suppressions.yml
.cargo/: audit.toml
.github/workflows/: ai-reviews.yml
migrations/: 001_initial_schema.sql
src/: config.rs  lib.rs  main.rs  models.rs  notifications.rs  orchestrator.rs  rules.rs  suppressions.rs
src/adapters/: claude.rs  codex.rs  mod.rs
src/github/: client.rs  diff.rs  mod.rs
src/ledger/: json.rs  mod.rs  postgres.rs
