[package]
name = "ai-review"
version = "0.1.0"
edition = "2021"
description = "Multi-agent AI code review pipeline"
authors = ["LGTM Contributors"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
octocrab = "0.41"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Phase 2: Database
# sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
