[package]
name = "ai-review"
version = "0.1.0"
edition = "2021"
description = "Multi-agent AI code review pipeline"
authors = ["LGTM Contributors"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive", "env"] }
octocrab = "0.48"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
md5 = "0.7"

# Phase 2: Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "macros"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
